minor code smell fixes